--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">Calculator</string>
     <string name="_7">7</string>
     <string name="_8">8</string>
-    <string name="_7">7</string>
     <string name="_4">4</string>
     <string name="_5">5</string>
     <string name="_6">6</string>
     <string name="_1">1</string>
+    <string name="rad">RAD</string>
 </resources>
