--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="_6">6</string>
     <string name="_1">1</string>
     <string name="rad">RAD</string>
+    <string name="u232b">⌫</string>
 </resources>
